basically an init

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,9 @@ platform = espressif32
 board = upesy_wroom
 framework = arduino
 monitor_speed = 115200
-lib_deps = alexitoo00/NewEncoder@^1.0.4
+lib_deps = 
+	madhephaestus/ESP32Encoder@^0.11.7
+	mathertel/OneButton@^2.6.1
+	adafruit/Adafruit SSD1306@^2.5.13
+	adafruit/Adafruit GFX Library@^1.11.11
+	adafruit/Adafruit BusIO@^1.17.0
